--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,43 @@
 *{
     padding: 0;
     margin: 0;
+    font-family: 'Roboto', Arial;
 }
-
+#main-is{
+    margin-top: 9em;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
 #iniciar-form{
     padding: 1em;
-    margin: 10em auto 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     border: 1px solid black;
-    width: 300px;
+    width: 350px;
     box-shadow: 1px 2px 15px 0px gray;
+    border-radius: 4%;
+    height: 250px;
 }
 #iniciar-form input{
     margin: 0.5em;
     width: 100%;
     height: 2em;
+    border: 1px solid grey;
+    border-radius: 5%;
+    padding-left: 9px;
 }
 #iniciar-form button{
     margin: 0.5em;
     width: 100%;
+    padding: 5px 2px;
+}
+
+@media (max-width: 645px) {
+    #iniciar-form{
+        margin-top: 5em;
+    }
 }
