--- a/src/index.css
+++ b/src/index.css
@@ -22,12 +22,48 @@
     border-radius: 4%;
     height: 325px;
 }
+#reg-form{
+    margin: 10em auto 0 auto;
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    border: 1px solid black;
+    width: 350px;
+    box-shadow: 1px 2px 15px 0px gray;
+    border-radius: 4%;
+    height: 500px;
+}
+#reg-form input[type="text"],input[type="date"],input[type="email"],input[type="password"]{
+    width: 70%;
+    padding: 8px 6px ;
+    border-radius: 6px;
+    border: 1px groove #ccc;
+    border-radius: 6px;
+}
+#container-selector{
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+
+}
+
+#selector{
+    
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    border: 1px groove #ccc;
+    border-radius: 6px;
+    width: 30%;
+}
 #iniciar-form input{
     margin: 0.5em;
     width: 100%;
     height: 2em;
     border: 1px solid grey;
-    border-radius: 5%;
+    border-radius: 6px;
     padding-left: 9px;
 }
 #iniciar-form button{
